snapshots/serde/serde/src/private/doc.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 159
kind: unit
spaces:
  - name: Error
    start_line: 11
    end_line: 18
    kind: impl
    spaces:
      - name: custom
        start_line: 12
        end_line: 17
        kind: function
        spaces: []
        metrics:
          nargs:
            total_functions: 1
            total_closures: 0
            average_functions: 1
            average_closures: 0
            total: 1
            average: 1
            functions_min: 1
            functions_max: 1
            closures_min: 0
            closures_max: 0
          nexits:
            sum: 1
            average: 1
            min: 1
            max: 1
          cognitive:
            sum: 0
            average: 0
            min: 0
            max: 0
          cyclomatic:
            sum: 1
            average: 1
            min: 1
            max: 1
          halstead:
            n1: 8
            N1: 9
            n2: 3
            N2: 3
            length: 12
            estimated_program_length: 28.755
            purity_ratio: 2.396
            vocabulary: 11
            volume: 41.513
            difficulty: 4
            level: 0.25
            effort: 166.053
            time: 9.225
            bugs: 0.01
          loc:
            sloc: 6
            ploc: 6
            lloc: 0
            cloc: 0
            blank: 0
            sloc_average: 6
            ploc_average: 6
            lloc_average: 0
            cloc_average: 0
            blank_average: 0
            sloc_min: 6
            sloc_max: 6
            cloc_min: 0
            cloc_max: 0
            ploc_min: 6
            ploc_max: 6
            lloc_min: 0
            lloc_max: 0
            blank_min: 0
            blank_max: 0
          nom:
            functions: 1
            closures: 0
            functions_average: 1
            closures_average: 0
            total: 1
            average: 1
            functions_min: 1
            functions_max: 1
            closures_min: 0
            closures_max: 0
          mi:
            mi_original: 122.368
            mi_sei: 100.941
            mi_visual_studio: 71.56
          abc:
            assignments: 0
            branches: 0
            conditions: 0
            magnitude: 0
            assignments_average: 0
            branches_average: 0
            conditions_average: 0
            assignments_min: 0
            assignments_max: 0
            branches_min: 0
            branches_max: 0
            conditions_min: 0
            conditions_max: 0
    metrics:
      nargs:
        total_functions: 1
        total_closures: 0
        average_functions: 1
        average_closures: 0
        total: 1
        average: 1
        functions_min: 0
        functions_max: 1
        closures_min: 0
        closures_max: 0
      nexits:
        sum: 1
        average: 1
        min: 0
        max: 1
      cognitive:
        sum: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 3
        average: 1.5
        min: 1
        max: 2
      halstead:
        n1: 9
        N1: 11
        n2: 4
        N2: 4
        length: 15
        estimated_program_length: 36.529
        purity_ratio: 2.435
        vocabulary: 13
        volume: 55.507
        difficulty: 4.5
        level: 0.222
        effort: 249.78
        time: 13.877
        bugs: 0.013
      loc:
        sloc: 8
        ploc: 8
        lloc: 0
        cloc: 0
        blank: 0
        sloc_average: 4
        ploc_average: 4
        lloc_average: 0
        cloc_average: 0
        blank_average: 0
        sloc_min: 6
        sloc_max: 6
        cloc_min: 0
        cloc_max: 0
        ploc_min: 6
        ploc_max: 6
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 0.5
        closures_average: 0
        total: 1
        average: 0.5
        functions_min: 0
        functions_max: 1
        closures_min: 0
        closures_max: 0
      mi:
        mi_original: 115.737
        mi_sei: 91.578
        mi_visual_studio: 67.683
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
  - name: Error
    start_line: 21
    end_line: 25
    kind: impl
    spaces:
      - name: description
        start_line: 22
        end_line: 24
        kind: function
        spaces: []
        metrics:
          nargs:
            total_functions: 1
            total_closures: 0
            average_functions: 1
            average_closures: 0
            total: 1
            average: 1
            functions_min: 1
            functions_max: 1
            closures_min: 0
            closures_max: 0
          nexits:
            sum: 1
            average: 1
            min: 1
            max: 1
          cognitive:
            sum: 0
            average: 0
            min: 0
            max: 0
          cyclomatic:
            sum: 1
            average: 1
            min: 1
            max: 1
          halstead:
            n1: 7
            N1: 9
            n2: 3
            N2: 3
            length: 12
            estimated_program_length: 24.406
            purity_ratio: 2.034
            vocabulary: 10
            volume: 39.863
            difficulty: 3.5
            level: 0.286
            effort: 139.521
            time: 7.751
            bugs: 0.009
          loc:
            sloc: 3
            ploc: 3
            lloc: 0
            cloc: 0
            blank: 0
            sloc_average: 3
            ploc_average: 3
            lloc_average: 0
            cloc_average: 0
            blank_average: 0
            sloc_min: 3
            sloc_max: 3
            cloc_min: 0
            cloc_max: 0
            ploc_min: 3
            ploc_max: 3
            lloc_min: 0
            lloc_max: 0
            blank_min: 0
            blank_max: 0
          nom:
            functions: 1
            closures: 0
            functions_average: 1
            closures_average: 0
            total: 1
            average: 1
            functions_min: 1
            functions_max: 1
            closures_min: 0
            closures_max: 0
          mi:
            mi_original: 133.808
            mi_sei: 117.445
            mi_visual_studio: 78.25
          abc:
            assignments: 0
            branches: 0
            conditions: 0
            magnitude: 0
            assignments_average: 0
            branches_average: 0
            conditions_average: 0
            assignments_min: 0
            assignments_max: 0
            branches_min: 0
            branches_max: 0
            conditions_min: 0
            conditions_max: 0
    metrics:
      nargs:
        total_functions: 1
        total_closures: 0
        average_functions: 1
        average_closures: 0
        total: 1
        average: 1
        functions_min: 0
        functions_max: 1
        closures_min: 0
        closures_max: 0
      nexits:
        sum: 1
        average: 1
        min: 0
        max: 1
      cognitive:
        sum: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 3
        average: 1.5
        min: 1
        max: 2
      halstead:
        n1: 8
        N1: 11
        n2: 4
        N2: 4
        length: 15
        estimated_program_length: 32
        purity_ratio: 2.133
        vocabulary: 12
        volume: 53.774
        difficulty: 4
        level: 0.25
        effort: 215.098
        time: 11.95
        bugs: 0.012
      loc:
        sloc: 5
        ploc: 5
        lloc: 0
        cloc: 0
        blank: 0
        sloc_average: 2.5
        ploc_average: 2.5
        lloc_average: 0
        cloc_average: 0
        blank_average: 0
        sloc_min: 3
        sloc_max: 3
        cloc_min: 0
        cloc_max: 0
        ploc_min: 3
        ploc_max: 3
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 0.5
        closures_average: 0
        total: 1
        average: 0.5
        functions_min: 0
        functions_max: 1
        closures_min: 0
        closures_max: 0
      mi:
        mi_original: 123.516
        mi_sei: 102.801
        mi_visual_studio: 72.232
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
  - name: Error
    start_line: 27
    end_line: 31
    kind: impl
    spaces:
      - name: fmt
        start_line: 28
        end_line: 30
        kind: function
        spaces: []
        metrics:
          nargs:
            total_functions: 2
            total_closures: 0
            average_functions: 2
            average_closures: 0
            total: 2
            average: 2
            functions_min: 2
            functions_max: 2
            closures_min: 0
            closures_max: 0
          nexits:
            sum: 1
            average: 1
            min: 1
            max: 1
          cognitive:
            sum: 0
            average: 0
            min: 0
            max: 0
          cyclomatic:
            sum: 1
            average: 1
            min: 1
            max: 1
          halstead:
            n1: 8
            N1: 10
            n2: 4
            N2: 6
            length: 16
            estimated_program_length: 32
            purity_ratio: 2
            vocabulary: 12
            volume: 57.359
            difficulty: 6
            level: 0.167
            effort: 344.156
            time: 19.12
            bugs: 0.016
          loc:
            sloc: 3
            ploc: 3
            lloc: 0
            cloc: 0
            blank: 0
            sloc_average: 3
            ploc_average: 3
            lloc_average: 0
            cloc_average: 0
            blank_average: 0
            sloc_min: 3
            sloc_max: 3
            cloc_min: 0
            cloc_max: 0
            ploc_min: 3
            ploc_max: 3
            lloc_min: 0
            lloc_max: 0
            blank_min: 0
            blank_max: 0
          nom:
            functions: 1
            closures: 0
            functions_average: 1
            closures_average: 0
            total: 1
            average: 1
            functions_min: 1
            functions_max: 1
            closures_min: 0
            closures_max: 0
          mi:
            mi_original: 131.916
            mi_sei: 114.715
            mi_visual_studio: 77.144
          abc:
            assignments: 0
            branches: 0
            conditions: 0
            magnitude: 0
            assignments_average: 0
            branches_average: 0
            conditions_average: 0
            assignments_min: 0
            assignments_max: 0
            branches_min: 0
            branches_max: 0
            conditions_min: 0
            conditions_max: 0
    metrics:
      nargs:
        total_functions: 2
        total_closures: 0
        average_functions: 2
        average_closures: 0
        total: 2
        average: 2
        functions_min: 0
        functions_max: 2
        closures_min: 0
        closures_max: 0
      nexits:
        sum: 1
        average: 1
        min: 0
        max: 1
      cognitive:
        sum: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 3
        average: 1.5
        min: 1
        max: 2
      halstead:
        n1: 9
        N1: 12
        n2: 4
        N2: 6
        length: 18
        estimated_program_length: 36.529
        purity_ratio: 2.029
        vocabulary: 13
        volume: 66.608
        difficulty: 6.75
        level: 0.148
        effort: 449.603
        time: 24.978
        bugs: 0.02
      loc:
        sloc: 5
        ploc: 5
        lloc: 0
        cloc: 0
        blank: 0
        sloc_average: 2.5
        ploc_average: 2.5
        lloc_average: 0
        cloc_average: 0
        blank_average: 0
        sloc_min: 3
        sloc_max: 3
        cloc_min: 0
        cloc_max: 0
        ploc_min: 3
        ploc_max: 3
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 0.5
        closures_average: 0
        total: 1
        average: 0.5
        functions_min: 0
        functions_max: 1
        closures_min: 0
        closures_max: 0
      mi:
        mi_original: 122.403
        mi_sei: 101.195
        mi_visual_studio: 71.581
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
metrics:
  nargs:
    total_functions: 4
    total_closures: 0
    average_functions: 1.333
    average_closures: 0
    total: 4
    average: 1.333
    functions_min: 0
    functions_max: 2
    closures_min: 0
    closures_max: 0
  nexits:
    sum: 3
    average: 1
    min: 0
    max: 1
  cognitive:
    sum: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 10
    average: 1.429
    min: 1
    max: 2
  halstead:
    n1: 19
    N1: 499
    n2: 85
    N2: 220
    length: 719
    estimated_program_length: 625.509
    purity_ratio: 0.87
    vocabulary: 104
    volume: 4817.616
    difficulty: 24.588
    level: 0.041
    effort: 118456.68
    time: 6580.927
    bugs: 0.804
  loc:
    sloc: 159
    ploc: 148
    lloc: 0
    cloc: 1
    blank: 10
    sloc_average: 22.714
    ploc_average: 21.143
    lloc_average: 0
    cloc_average: 0.143
    blank_average: 1.429
    sloc_min: 5
    sloc_max: 8
    cloc_min: 0
    cloc_max: 0
    ploc_min: 5
    ploc_max: 8
    lloc_min: 0
    lloc_max: 0
    blank_min: 0
    blank_max: 0
  nom:
    functions: 3
    closures: 0
    functions_average: 0.429
    closures_average: 0
    total: 3
    average: 0.429
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  mi:
    mi_original: 42.488
    mi_sei: -7.259
    mi_visual_studio: 24.847
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
