snapshots/serde/serde/src/private/mod.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 50
kind: unit
spaces:
  - name: from_utf8_lossy
    start_line: 32
    end_line: 34
    kind: function
    spaces: []
    metrics:
      nargs:
        total_functions: 1
        total_closures: 0
        average_functions: 1
        average_closures: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      nexits:
        sum: 1
        average: 1
        min: 1
        max: 1
      cognitive:
        sum: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        average: 1
        min: 1
        max: 1
      halstead:
        n1: 9
        N1: 11
        n2: 3
        N2: 5
        length: 16
        estimated_program_length: 33.284
        purity_ratio: 2.08
        vocabulary: 12
        volume: 57.359
        difficulty: 7.5
        level: 0.133
        effort: 430.196
        time: 23.9
        bugs: 0.019
      loc:
        sloc: 3
        ploc: 3
        lloc: 0
        cloc: 0
        blank: 0
        sloc_average: 3
        ploc_average: 3
        lloc_average: 0
        cloc_average: 0
        blank_average: 0
        sloc_min: 3
        sloc_max: 3
        cloc_min: 0
        cloc_max: 0
        ploc_min: 3
        ploc_max: 3
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      mi:
        mi_original: 131.916
        mi_sei: 114.715
        mi_visual_studio: 77.144
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
  - name: from_utf8_lossy
    start_line: 44
    end_line: 49
    kind: function
    spaces: []
    metrics:
      nargs:
        total_functions: 1
        total_closures: 0
        average_functions: 1
        average_closures: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      nexits:
        sum: 1
        average: 1
        min: 1
        max: 1
      cognitive:
        sum: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        average: 1
        min: 1
        max: 1
      halstead:
        n1: 8
        N1: 12
        n2: 5
        N2: 6
        length: 18
        estimated_program_length: 35.61
        purity_ratio: 1.978
        vocabulary: 13
        volume: 66.608
        difficulty: 4.8
        level: 0.208
        effort: 319.718
        time: 17.762
        bugs: 0.016
      loc:
        sloc: 6
        ploc: 3
        lloc: 0
        cloc: 3
        blank: 0
        sloc_average: 6
        ploc_average: 3
        lloc_average: 0
        cloc_average: 3
        blank_average: 0
        sloc_min: 6
        sloc_max: 6
        cloc_min: 3
        cloc_max: 3
        ploc_min: 3
        ploc_max: 3
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      mi:
        mi_original: 119.91
        mi_sei: 141.851
        mi_visual_studio: 70.123
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
metrics:
  nargs:
    total_functions: 2
    total_closures: 0
    average_functions: 1
    average_closures: 0
    total: 2
    average: 1
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  nexits:
    sum: 2
    average: 1
    min: 0
    max: 1
  cognitive:
    sum: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 3
    average: 1
    min: 1
    max: 1
  halstead:
    n1: 14
    N1: 81
    n2: 44
    N2: 85
    length: 166
    estimated_program_length: 293.518
    purity_ratio: 1.768
    vocabulary: 58
    volume: 972.425
    difficulty: 13.523
    level: 0.074
    effort: 13149.836
    time: 730.546
    bugs: 0.186
  loc:
    sloc: 50
    ploc: 30
    lloc: 0
    cloc: 11
    blank: 9
    sloc_average: 16.667
    ploc_average: 10
    lloc_average: 0
    cloc_average: 3.667
    blank_average: 3
    sloc_min: 3
    sloc_max: 6
    cloc_min: 0
    cloc_max: 3
    ploc_min: 3
    ploc_max: 3
    lloc_min: 0
    lloc_max: 0
    blank_min: 0
    blank_max: 0
  nom:
    functions: 2
    closures: 0
    functions_average: 0.667
    closures_average: 0
    total: 2
    average: 0.667
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  mi:
    mi_original: 71.16
    mi_sei: 60.485
    mi_visual_studio: 41.614
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
