snapshots/serde/serde/src/private/size_hint.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 21
kind: unit
spaces:
  - name: from_bounds
    start_line: 3
    end_line: 8
    kind: function
    spaces: []
    metrics:
      nargs:
        total_functions: 1
        total_closures: 0
        average_functions: 1
        average_closures: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      nexits:
        sum: 1
        average: 1
        min: 1
        max: 1
      cognitive:
        sum: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        average: 1
        min: 1
        max: 1
      halstead:
        n1: 10
        N1: 14
        n2: 3
        N2: 4
        length: 18
        estimated_program_length: 37.974
        purity_ratio: 2.11
        vocabulary: 13
        volume: 66.608
        difficulty: 6.667
        level: 0.15
        effort: 444.053
        time: 24.67
        bugs: 0.019
      loc:
        sloc: 6
        ploc: 6
        lloc: 0
        cloc: 0
        blank: 0
        sloc_average: 6
        ploc_average: 6
        lloc_average: 0
        cloc_average: 0
        blank_average: 0
        sloc_min: 6
        sloc_max: 6
        cloc_min: 0
        cloc_max: 0
        ploc_min: 6
        ploc_max: 6
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      mi:
        mi_original: 119.91
        mi_sei: 97.394
        mi_visual_studio: 70.123
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
  - name: cautious
    start_line: 12
    end_line: 14
    kind: function
    spaces: []
    metrics:
      nargs:
        total_functions: 1
        total_closures: 0
        average_functions: 1
        average_closures: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      nexits:
        sum: 1
        average: 1
        min: 1
        max: 1
      cognitive:
        sum: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        average: 1
        min: 1
        max: 1
      halstead:
        n1: 9
        N1: 12
        n2: 6
        N2: 7
        length: 19
        estimated_program_length: 44.039
        purity_ratio: 2.318
        vocabulary: 15
        volume: 74.231
        difficulty: 5.25
        level: 0.19
        effort: 389.712
        time: 21.651
        bugs: 0.018
      loc:
        sloc: 3
        ploc: 3
        lloc: 0
        cloc: 0
        blank: 0
        sloc_average: 3
        ploc_average: 3
        lloc_average: 0
        cloc_average: 0
        blank_average: 0
        sloc_min: 3
        sloc_max: 3
        cloc_min: 0
        cloc_max: 0
        ploc_min: 3
        ploc_max: 3
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      mi:
        mi_original: 130.575
        mi_sei: 112.781
        mi_visual_studio: 76.36
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
  - name: helper
    start_line: 16
    end_line: 21
    kind: function
    spaces: []
    metrics:
      nargs:
        total_functions: 1
        total_closures: 0
        average_functions: 1
        average_closures: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      nexits:
        sum: 1
        average: 1
        min: 1
        max: 1
      cognitive:
        sum: 1
        average: 1
        min: 1
        max: 1
      cyclomatic:
        sum: 4
        average: 4
        min: 4
        max: 4
      halstead:
        n1: 12
        N1: 25
        n2: 7
        N2: 12
        length: 37
        estimated_program_length: 62.671
        purity_ratio: 1.694
        vocabulary: 19
        volume: 157.173
        difficulty: 10.286
        level: 0.097
        effort: 1616.64
        time: 89.813
        bugs: 0.046
      loc:
        sloc: 6
        ploc: 6
        lloc: 1
        cloc: 0
        blank: 0
        sloc_average: 6
        ploc_average: 6
        lloc_average: 1
        cloc_average: 0
        blank_average: 0
        sloc_min: 6
        sloc_max: 6
        cloc_min: 0
        cloc_max: 0
        ploc_min: 6
        ploc_max: 6
        lloc_min: 1
        lloc_max: 1
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      mi:
        mi_original: 114.755
        mi_sei: 90.263
        mi_visual_studio: 67.108
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
metrics:
  nargs:
    total_functions: 3
    total_closures: 0
    average_functions: 1
    average_closures: 0
    total: 3
    average: 1
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  nexits:
    sum: 3
    average: 1
    min: 0
    max: 1
  cognitive:
    sum: 1
    average: 0.333
    min: 0
    max: 1
  cyclomatic:
    sum: 7
    average: 1.75
    min: 1
    max: 4
  halstead:
    n1: 17
    N1: 57
    n2: 22
    N2: 31
    length: 88
    estimated_program_length: 167.594
    purity_ratio: 1.904
    vocabulary: 39
    volume: 465.115
    difficulty: 11.977
    level: 0.083
    effort: 5570.814
    time: 309.49
    bugs: 0.105
  loc:
    sloc: 21
    ploc: 18
    lloc: 1
    cloc: 0
    blank: 3
    sloc_average: 5.25
    ploc_average: 4.5
    lloc_average: 0.25
    cloc_average: 0
    blank_average: 0.75
    sloc_min: 3
    sloc_max: 6
    cloc_min: 0
    cloc_max: 0
    ploc_min: 3
    ploc_max: 6
    lloc_min: 0
    lloc_max: 1
    blank_min: 0
    blank_max: 0
  nom:
    functions: 3
    closures: 0
    functions_average: 0.75
    closures_average: 0
    total: 3
    average: 0.75
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  mi:
    mi_original: 88.129
    mi_sei: 52.155
    mi_visual_studio: 51.537
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0

